clusters/videoconferencia/argo/01_deployment-nginx-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-2-deployment
  labels:
    app: nginx-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-2
  template:
    metadata:
      labels:
        app: nginx-2
    spec:
      containers:
        - name: nginx-2
          image: nginx:latest
          ports:
            - containerPort: 80
