clusters/videoconferencia/argo/02_service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: argo
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
