clusters/videoconferencia/argo/03_ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-argo
  namespace: argo
spec:
  ingressClassName: nginx
  rules:
  - host: ingress-nginx-argo
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ingress-nginx-argo
    secretName: tls-videoconferenciaclaro
